make sure short headers don't wrap

--- a/static/src/stylesheets/module/facia-cards/_slices.scss
+++ b/static/src/stylesheets/module/facia-cards/_slices.scss
@@ -176,7 +176,7 @@ Hence why a greater depth of selector specificity is needed.
 }
 
 .facia-slice__item--nav-list {
-    display: inline-block;
+    display: block;
 }
 
 .facia-slice--nav-list--media {
